--- a/src/main/webapp/pages/messages/boite-reception.xhtml
+++ b/src/main/webapp/pages/messages/boite-reception.xhtml
@@ -102,6 +102,14 @@
                             </f:facet>
                             #{c.text}
                         </p:column>
+                        <p:column headerText="Type" width="10%" filterBy="#{c.messageType}">
+                            <f:facet name="filter">
+                                <p:inputText value="#{inMessageListMB.filter.entity.messageType}">
+                                    <p:ajax process="@this" update="@none" oncomplete="PF('messageList').filter()"/>
+                                </p:inputText>
+                            </f:facet>
+                            <div><span class="badge #{paymentDataView.getMsgStatusClass(c.messageType)}">#{c.messageType}</span></div>
+                        </p:column>
                     </p:dataTable>
                     <p:poll update="inMsg" interval="50" rendered="true"/>
 
@@ -116,9 +124,6 @@
             <p:tab title="Envoyés">
                 <h:panelGrid columns="2" cellpadding="10">
                     <p:graphicImage name="demo/images/godfather/godfather2.jpg"/>
-                    <h:outputText value="Francis Ford Coppola's legendary continuation and sequel to his landmark 1972 film, The_Godfather, parallels the young Vito Corleone's rise with his son Michael's spiritual fall, deepening The_Godfather's depiction of the dark side of the American dream.
-                In the early 1900s, the child Vito flees his Sicilian village for America after the local Mafia kills his family. Vito struggles to make a living, legally or illegally, for his wife and growing brood in Little Italy,
-                killing the local Black Hand Fanucci after he demands his customary cut of the tyro's business. With Fanucci gone, Vito's communal stature grows."/>
                 </h:panelGrid>
             </p:tab>
         </p:tabView>
