--- a/src/main/webapp/pages/operations/paiements.xhtml
+++ b/src/main/webapp/pages/operations/paiements.xhtml
@@ -80,7 +80,7 @@
                                  rowKey="#{c.id}" lazy="true" paginator="true"
                                  filteredValue="#{paymentDataView.filteredValue}"
                                  paginatorPosition="bottom" selection="#{paymentDataView.selected}"
-                                 paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown} {JumpToPageDropdown}"
+                                 paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown} {JumpToPageDropdown} {Exporters}"
                                  currentPageReportTemplate="[ {startRecord} to {endRecord} of {totalRecords} ]"
                                  rowsPerPageTemplate="5,10,15,20,30"
                                  id="paymentTable"
@@ -91,6 +91,20 @@
                         <p:ajax event="rowSelect" update="@(.ui-button, .ui-confirm-dialog)"/>
                         <p:ajax event="rowUnselect" update="@(.ui-button, .ui-confirm-dialog)"/>
                         <p:ajax event="toggleSelect" update="@(.ui-button, .ui-confirm-dialog)"/>
+
+                        <f:facet name="{Exporters}">
+                            <div style="float:right;padding-top: 5px;">
+                                <h:commandLink>
+                                    <p:graphicImage name="images/excel_48px.png" width="24"/>
+                                    <p:dataExporter type="xls" target="paymentTable" fileName="transactions" />
+                                </h:commandLink>
+
+                                <h:commandLink>
+                                    <p:graphicImage name="images/pdf_48px.png" width="24"/>
+                                    <p:dataExporter type="pdf" target="paymentTable" fileName="transactions"/>
+                                </h:commandLink>
+                            </div>
+                        </f:facet>
 
                         <f:facet name="header">
                             Recherche : <p:inputNumber id="inptId" decimalPlaces="0"
@@ -107,16 +121,16 @@
                         <p:column selectionMode="multiple" width="5%" styleClass="align-center"/>
 
                         <p:column width="5%" styleClass="align-center" headerText="Id" sortBy="#{c.id}">
-                            #{c.id}
+                            <h:outputText value="#{c.id}"/>
                         </p:column>
 
                         <p:column headerText="Operation">
                             <div class="p-col">
                                 <div>
-                                    <span class="badge badge-info">#{c.commandType}</span>
-                                    <span class="badge badge-info">#{c.nom}</span>
-                                    <span class="badge badge-info">#{c.agentProfile}</span>
-                                    <span class="badge badge-info">#{c.recipientProfile}</span>
+                                    <h:outputText styleClass="badge badge-info" value="#{c.commandType}"></h:outputText>
+                                    <h:outputText styleClass="badge badge-info" value="#{c.nom}"></h:outputText>
+                                    <h:outputText styleClass="badge badge-info" value="#{c.agentProfile}"></h:outputText>
+                                    <h:outputText styleClass="badge badge-info" value="#{c.recipientProfile}"></h:outputText>
                                 </div>
                             </div>
                         </p:column>
@@ -129,8 +143,12 @@
                                 </p:inputNumber>
                             </f:facet>
                             <div class="p-col">
-                                <div><span class="badge badge-primary">#{c.payer}</span></div>
-                                <div>#{c.payerName}</div>
+                                <div>
+                                    <h:outputText styleClass="badge badge-info" value="#{c.payer}"></h:outputText>
+                                </div>
+                                <div>
+                                    <h:outputText styleClass="badge badge-info" value="#{c.payerName}"></h:outputText>
+                                </div>
                             </div>
                         </p:column>
                         <p:column headerText="Beneficiaire" sortBy="#{c.recipient}" filterBy="#{c.recipient}">
@@ -141,7 +159,8 @@
                                 </p:inputNumber>
                             </f:facet>
                             <div class="p-col">
-                                <div><span class="badge badge-primary">#{c.recipient}</span>(#{c.recipientNetwork})
+                                <div><h:outputText styleClass="badge badge-info" value="#{c.recipient}"></h:outputText>
+                                    (<h:outputText styleClass="badge badge-info" value="#{c.recipientNetwork}"></h:outputText>)
                                 </div>
                             </div>
                         </p:column>
@@ -185,6 +204,14 @@
                                 <div>R: <span class="badge badge-primary">#{c.outGateway}</span></div>
                             </div>
                         </p:column>
+                        <p:column headerText="Reponse" width="15%">
+                            <div class="p-col">
+                                <div>#{c.response}</div>
+                            </div>
+                        </p:column>
+                        <p:column headerText="Confirmation" width="15%">
+                            <h:outputText value="#{c.confirmed ? 'OUI': 'NON'}" styleClass="#{c.confirmed ? 'btn-success': 'btn-warning'}"/>
+                        </p:column>
                     </p:dataTable>
                     <p:poll update="paymentTable" interval="50" rendered="true"/>
                 </div>
@@ -201,6 +228,7 @@
                   width="400" responsive="true" styleClass="box-success">
             <p:dataList id="selectedCarsList" value="#{paymentDataView.selected}" var="p"
                         type="definition">
+
                 <f:facet name="header">
                     ID: #{p.id} - Type: #{p.nom} - Status: #{p.status}
                 </f:facet>
