--- a/src/main/webapp/pages/messages/boite-reception.xhtml
+++ b/src/main/webapp/pages/messages/boite-reception.xhtml
@@ -68,7 +68,7 @@
                         </f:facet>
                         <p:column selectionMode="multiple" width="5%" styleClass="align-center"/>
 
-                        <p:column headerText="Id">
+                        <p:column headerText="Id" width="5%">
                             #{c.id}
                         </p:column>
 
@@ -122,9 +122,83 @@
                 </h:form>
             </p:tab>
             <p:tab title="Envoyés">
-                <h:panelGrid columns="2" cellpadding="10">
-                    <p:graphicImage name="demo/images/godfather/godfather2.jpg"/>
-                </h:panelGrid>
+                <h:form id="form2">
+
+                    <p:separator/>
+                    <p:dataTable var="c" value="#{outMessageListMB.messages}" rows="5"
+                                 rowKey="#{c.id}" lazy="true" paginator="true"
+                                 filteredValue="#{outMessageListMB.filteredValue}"
+                                 paginatorPosition="bottom" selection="#{outMessageListMB.selected}"
+                                 paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown} {JumpToPageDropdown}"
+                                 currentPageReportTemplate="[ {startRecord} to {endRecord} of {totalRecords} ]"
+                                 rowsPerPageTemplate="5,10,15,20,30"
+                                 id="outMsg"
+                                 dynamic="true"
+                                 widgetVar="outmessageList"
+                    >
+
+                        <p:ajax event="rowSelectCheckbox" update="@(.ui-button, .ui-confirm-dialog)"/>
+                        <p:ajax event="rowUnselectCheckbox" update="@(.ui-button, .ui-confirm-dialog)"/>
+                        <p:ajax event="rowSelect" update="@(.ui-button, .ui-confirm-dialog)"/>
+                        <p:ajax event="rowUnselect" update="@(.ui-button, .ui-confirm-dialog)"/>
+                        <p:ajax event="toggleSelect" update="@(.ui-button, .ui-confirm-dialog)"/>
+
+                        <f:facet name="header">
+                            Find by id: <p:inputNumber id="inptId2" decimalPlaces="0" value="#{outMessageListMB.id}"/>
+                            <p:spacer height="5"/>
+                            <p:commandButton id="brFind2"
+                                             value="Find"
+                                             action="#{outMessageListMB.findById(outMessageListMB.id)}"
+                                             process="@form"
+                                             update="@form"
+                                             styleClass="btn-flat bg-black btn-states"
+                                             partialSubmit="true"/>
+                        </f:facet>
+                        <p:column selectionMode="multiple" width="5%" styleClass="align-center"/>
+
+                        <p:column headerText="Id" width="5%">
+                            #{c.id}
+                        </p:column>
+
+                        <p:column headerText="Date">
+                            #{c.createDate}
+                        </p:column>
+
+                        <p:column headerText="Destinataire" sortBy="#{c.address}" filterBy="#{c.address}">
+                            <f:facet name="filter">
+                                <p:inputText value="#{outMessageListMB.filter.entity.address}">
+                                    <p:ajax process="@this" update="@none" oncomplete="PF('outmessageList').filter()"/>
+                                </p:inputText>
+                            </f:facet>
+                            #{c.address}
+                        </p:column>
+
+                        <p:column headerText="Modem" sortBy="#{c.gatewayId}" filterBy="#{c.gatewayId}">
+                            <f:facet name="filter">
+                                <p:inputText value="#{outMessageListMB.filter.entity.gatewayId}">
+                                    <p:ajax process="@this" update="@none" oncomplete="PF('outmessageList').filter()"/>
+                                </p:inputText>
+                            </f:facet>
+                            #{c.gatewayId}
+                        </p:column>
+
+                        <p:column headerText="Text" width="40%" filterBy="#{c.text}">
+                            <f:facet name="filter">
+                                <p:inputText value="#{outMessageListMB.filter.entity.text}">
+                                    <p:ajax process="@this" update="@none" oncomplete="PF('outmessageList').filter()"/>
+                                </p:inputText>
+                            </f:facet>
+                            #{c.text}
+                        </p:column>
+                    </p:dataTable>
+
+                    <p:confirmDialog global="true" showEffect="fade" hideEffect="fade" styleClass="box-danger box-solid">
+                        <p:commandButton value="Yes" type="button" styleClass="btn-material btn-primary ui-confirmdialog-yes"
+                                         icon="fa fa-check"/>
+                        <p:commandButton value="No" type="button" styleClass="btn-material btn-danger ui-confirmdialog-no"
+                                         icon="fa fa-close"/>
+                    </p:confirmDialog>
+                </h:form>
             </p:tab>
         </p:tabView>
 
