Out Message Status Update
-update status in messages list

--- a/src/main/webapp/pages/messages/boite-reception.xhtml
+++ b/src/main/webapp/pages/messages/boite-reception.xhtml
@@ -160,6 +160,10 @@
                             #{c.id}
                         </p:column>
 
+                        <p:column headerText="Statut" width="5%">
+                            #{c.sentStatus}
+                        </p:column>
+
                         <p:column headerText="Date">
                             #{c.createDate}
                         </p:column>
